style.css
:root {
    --main-color: #ffefde;
    --content-bg-color: #dcc4b4;
    --button-colors: #d7d7cd;
}


body {
    padding: 0;
    margin: 0;
    display: grid;
    grid-template-columns: 1fr 4fr 1fr;
}


.header {
    background-color: var(--main-color);
    grid-column: 2/4;
    padding: 20px 40px 5px 40px;
    box-shadow: 5px 4px 8px #a38775;

    position: relative;
    z-index: 10;  /* specifies the stack order of an element */
}
.navbar {
    display: flex;

     /* put search-navbar and user-navbar at far left and far right */
    justify-content: space-between; 
}
.search-navbar {
    display: flex;
}
.search-navbar input[type="search"] {
    appearance: none;
    border: none;
    border-radius: 15px 0 0 15px;
    background-color: var(--content-bg-color);
    width: 50vw;
    height: 33px;
}
.search-navbar input[type="search"]:focus {
    background-color: #f7dfd3;
}
.search-navbar button:not(input[type="search"]) {
    appearance: none;
    border: none;
    width: 40px;
    height: 33px;
    background-color: var(--button-colors);
    background-image: url(images/magnify.svg);
    background-position: center;
    background-repeat: no-repeat;
    border-radius: 0 15px 15px 0;
}
.search-navbar button:not(input[type="search"]):hover {
    cursor: pointer;
    opacity: 0.5;
}
.user-navbar {
    display: flex;
    gap: 10px;
}
.user-navbar img[src="images/snowball.jpg"] {
    width: 40px;
    height: 40px;
    border-radius: 100%;
    margin-right: 4px;
}
.user-navbar img[src="images/bell-ring.svg"] {
    width: 23px;
    height: auto;
    margin-bottom: 8px;
    margin-right: 4px;
}
.user-navbar img[src="images/bell-ring.svg"]:hover {
    opacity: 0.5;
    cursor: pointer;
}
.user-info-wrapper {
    margin-top: 0px;
    display: flex;
    justify-content: space-between;
}
.left {
    /* Explicitly make profile picture arrange horizontally */
    display: flex;
    flex-direction: row;
    gap: 30px;
    align-content: center;
}
.right {
    display: flex;
    align-items: center;
    gap: 35px;
}
.user-info-wrapper img {
    /* user profile picture */
    width: 75px;
    height: 75px;
    border-radius: 100%;
}
.usesr-intro {
    /* Style for the username */
    display: flex;
    flex-direction: column;
}
.user-info-wrapper button {
    appearance: none;
    border: none;
    width: 80px;
    height: 30px;
    border-radius: 15px;
    font-size: 13px;
    background-color: var(--button-colors);
}


.dashboard {
    background-color: var(--button-colors);
    grid-column: 1/2;
    grid-row: 1/3;
}
.dashboard img {
    height: auto;
    width: 25px;
}
.dashboard-header img {
    height: auto;
    width: 40px;
    padding-right: 10px;

}
.menu, .dashboard-header {
    display: flex;
    padding: 0 40px;
}
.dashboard > div:nth-last-child(3) {
    margin-top: 40px;
}
.menu > img {
    /* menu icons */
    padding-right: 25px;
}
.dashboard-header {
    font-size: 25px;
    padding-bottom: 10px;
}
.menu:hover {
    background-color: #c8c9bd;
    cursor: pointer;
}


.content {
    background-color: var(--content-bg-color);
    grid-column: 2/4;  /* Outer grid layout */
    grid-row: 2/3;

    display: grid;
    grid-template-columns: 3fr 1fr;
}
.project-wrapper {
    padding: 30px;
    display: grid;  /** grid for the project cards */
    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
}
.card {
    padding: 20px;
    margin: 30px;

    display: flex;
    flex-direction: column;
    height: 200px;
    width: 300px;
    background-color: var(--main-color);
    border-left: 10px solid #d58f1e;
    border-radius: 10px;
    justify-content: space-between;

}
.card-buttons {
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
}
.card img {
    width: 20px;
    height: auto;
    margin-right: 10px;
}


.side-content {
    grid-column: 2/3;
    grid-row: 1/2;
}
.announcement {
    background-color: var(--main-color);

}
.announcement-card {
    margin: 30px;
}
.trending {
    background-color: var(--main-color);
}
.other-user-card {
    margin: 30px;
}

